--- a/.github/workflows/mep.yaml
+++ b/.github/workflows/mep.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Master Branch
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         uses: actions/checkout@v2
 
       - name: Echo for Prod
